Update the server start and readme instructions.